--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="div">
                 <h1 class='titulo_hearder'>Com o Combo+, você pode aproveitar a 
                 Alura+ e o Alura Língua por um preço único.</h1>
-                <img class="section_imagem" src="./imagens/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
+                <img class="section_imagem" src="Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
                 <a href="www.alura.com.br" class="conteiner__botao">Assine por 12x de R$ 120,00*</a>
                 <a href="www.alura.com.br" class="conteiner__botao conteiner__botao2">Assinar somente o Alura+</a>
                 <p class="paragrafo_hearder">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
@@ -21,7 +21,7 @@
     </hearder>
     <main class="principal">
         <section class="conteiner primeira_cessao" >
-            <img class="primeira_imagem_principal" src="./imagens/imagen_1.png" alt="imagem de um monitor com a foto de uma garota na tela">
+            <img class="primeira_imagem_principal" src="imagen_1.png" alt="imagem de um monitor com a foto de uma garota na tela">
             <div class="primeira_div">
                 <h1 class='primeiro_titulo'>Assista do seu jeito</h1>
                 <p class="primeiro_paragrafo">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros 
@@ -36,11 +36,11 @@
                 como quiser.</P>
                 <a class=' conteiner__botao primeiro_botao_principal'href="www.alura.com.br" >Assine o Combo+</a>
             </div>
-            <img class="segunda_imagem_principal" src="./imagens/Telas.png" alt="imagem da tela de um computador">
+            <img class="segunda_imagem_principal" src="Telas.png" alt="imagem da tela de um computador">
         </section>
         
         <section class="conteiner terceira_cessao">
-            <img  class="terceira_imagem_principal" src="./imagens/Notebook.png" alt="imagem de um notbook com os cursos da alura">
+            <img  class="terceira_imagem_principal" src="Notebook.png" alt="imagem de um notbook com os cursos da alura">
             <div class="terceira_div">
                 <h1 class="terceiro_titulo">Baixe seus cursos</h1>
                 <p class="terceiro_paragrafo">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre 
@@ -52,17 +52,17 @@
             <h2 class="dispositivos_titulo">Disponível nos seus dispositivos favoritos</h2>
             <ul class="dispositivos_lista">
                 <li>
-                    <img src="./imagens/tv.png" alt="">
+                    <img src="tv.png" alt="">
                     <h3 class="lista_item">TV</h3>
 
                 </li>
                 <li>
-                    <img src="./imagens/computador.png" alt="">
+                    <img src="computador.png" alt="">
                     <h3 class="lista_item">Computadores</h3>
 
                 </li>
                 <li>
-                    <img src="./imagens/celular.png" alt="">
+                    <img src="celular.png" alt="">
                     <h3 class="lista_item">Celular e tablets</h3>
 
                 </li>
@@ -70,7 +70,7 @@
         </section>
     
     <footer class="rodape">
-        <img class="image_logo_rodape" src="./imagens/Logo.png" alt="Logo da Alura">
+        <img class="image_logo_rodape" src="Logo.png" alt="Logo da Alura">
         <ul class="links">
             <li class="lista_links">
                 <a class="link" href="#">idiomas</a>
